made the alignment correct for the left and right arrows

--- a/src/components/recentHit.css
+++ b/src/components/recentHit.css
@@ -1,6 +1,6 @@
 .video-container{
     position: absolute;
-    top: 50%;
+    top: 30%;
     margin-left: auto;
     margin-right: auto;
     z-index: 100;
